apps/bookstack/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
