apps/bookstack/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 0
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: bookstack
                port:
                  name: http
  tls:
    - hosts:
        - ""
      secretName: bookstack-tls-ingress
